Sat Oct 11 10:19:39 2003  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb: handle exceptions correctly. Thanks, Gennady
	Bystritsky.

Fri Oct 10 07:50:54 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (is_defined): inheritance line adjustment as like as
	  rb_call_super().

Fri Oct 10 01:19:00 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509name.c (ossl_x509name_initialize): add
	  optional argument to specify the DirectoryString type
	  (ASN1::UTF8STRING by default). RFC3280 deprecates PrintableString
	  for DirectoryString, and strongly requires to use UTF8String for
	  all certificates issued after December, 31 2003.

	* ext/openssl/lib/openssl/x509.rb (X509::Name::parse): ditto.

Thu Oct  9 23:50:21 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_0): prevent thread from GC.
	  [ruby-dev:21572]

Thu Oct  9 19:11:44 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_0): non-volatile should be restored from
	  volatile.

Thu Oct  9 17:43:36 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_save_safe_level, proc_get_safe_level,
	  proc_set_safe_level): save/restore safe level 1..4.

Thu Oct  9 16:33:23 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (r_object0): remove unnecessary iv restoration for
	  USRMARSHAL. [ruby-dev:21582]

	* marshal.c (w_object): dump generic instance variables from
	  a string from '_dump'.

	* variable.c (rb_generic_ivar_table): return 0 if obj's FL_EXIVAR
	  is not set.

	* time.c (time_dump): copy instance variables to dumped string, to
	  be included in the marshaled data.

	* bignum.c (rb_big2ulong): add range check to ensure round trip.

Thu Oct  9 15:45:27 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (uv_to_utf8): change message to "out of range", since
	  negative values are not "too big". [ruby-dev21567]

Thu Oct  9 14:05:38 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>
