@@ -1,3 +1,8 @@
+Sat Oct 11 14:35:14 2003  Tanaka Akira  <akr@m17n.org>
+
+	* lib/pathname.rb (realpath_rec): fix handling of symlink to absolute
+	  path.
+
 Sat Oct 11 10:19:39 2003  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/monitor.rb: handle exceptions correctly. Thanks, Gennady
